--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -4,27 +4,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.time-control {
-    width: 50%;
-    display: flex;
-    input {
-        width: 100%;
-        padding: 1rem 2rem;
+    img {
+        width: 20%;
+        border-radius: 50%;
     }
-    p {
-        padding: 1rem;
+    h2 {
+        padding: 3rem 1rem 1rem 1rem;
     }
-}
-
-.play-control {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    width: 30%;
-    svg {
-        cursor: pointer;
+    h3 {
+        font-size: 1rem;
     }
 }
