--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -21,7 +21,7 @@
         width: 30%;
     }
     &:hover {
-        background: #8186ca;
+        background: #9b9fe9;
     }
 }
 
@@ -52,4 +52,8 @@
     background-color: rgba(155,155,155,0.5);
     border-radius: 20px;
     border: transparent;
+}
+
+.selected{
+    background: rgb(199, 159, 199);
 }
